make it simplier

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                 <p class="introduction__content__paragraph">I design and develop services for customers of all sizes, specializing in creating stylish, modern
                     websites, web services and online store.</p>
                 <ul class="introduction__content__box">
-                    <li class="introduction__content__box__item">Biography</li>
-                    <li class="introduction__content__box__item">What I Do?</li>
-                    <li class="introduction__content__box__item">Awards</li>
-                    <li class="introduction__content__box__item">Experience</li>
-                    <li class="introduction__content__box__item">My Portfolio</li>
-                    <li class="introduction__content__box__item">Contact</li>
+                    <li>Biography</li>
+                    <li>What I Do?</li>
+                    <li>Awards</li>
+                    <li>Experience</li>
+                    <li>My Portfolio</li>
+                    <li>Contact</li>
                 </ul>
             </div>
             <div class="introduction__logo">
